cmake_minimum_required(VERSION 3.16)
project(MOOC_C C)

set(CMAKE_C_STANDARD 99)

add_executable(MOOC_C main.c)
add_executable(change classwork/change.c classwork/get_max.c classwork/salary.c classwork/switch.c classwork/get_number.c classwork/guess_number.c classwork/sum.c classwork/reverse.c classwork/dynamic.c)
add_executable(try classwork/try.c)
add_executable(plus classwork/plus.c)
add_executable(heightconvert classwork/heightconvert.c)
add_executable(timerange classwork/timerange.c)
add_executable(exchange_value classwork/exchange_value.c)
add_executable(reversevalue homework/reversevalue.c)
add_executable(time_interval classwork/time_interval.c)
add_executable(get_max classwork/get_max.c)
add_executable(salary classwork/salary.c)
add_executable(switch classwork/switch.c)
add_executable(get_number classwork/get_number.c)
add_executable(guess_number classwork/guess_number.c)
add_executable(sum classwork/sum.c)
add_executable(reverse classwork/reverse.c)
add_executable(dynamic classwork/dynamic.c)